--- a/gb/ncid278_3.md
+++ b/gb/ncid278_3.md
@@ -1,4 +1,7 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxrfvz257/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/hxrfvz257/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/hxrfvz257/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/hxrfvz257/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/hxrfvz257/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/hxrfvz257/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/hxrfvz257/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>中国人权</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/hxrfvz257/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxrfvz257/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/13/n11719713.md#1" target="_blank">香港4.3万人出席6.12半周年集会</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/13/n11719713.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1912120820262188-150x120.jpg" align ="left"></a>《逃犯条例》修订引起的抗争行动，持续超过半年。12日是6.12包围立法会的半年，民间有多项纪念活动，其中民间集会团队在中环爱丁堡广场举办“齐上齐落”集会，重申要求撤回暴动定性及撤销义士控罪，有4.3万人参加。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 10:02 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/12/n11718936.md#1" target="_blank">美联社纪念被中共以间谍罪杀害的中国记者</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/12/n11718936.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1717050-150x120.jpg" align ="left"></a>饶引之（Y.C. Jao）是一位受人尊敬的中国记者，1949年4月他在美联社（AP）工作时，蒋介石败退，毛泽东的红军冲进了南京，随后共产党统治中国。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 6:46 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/12/n11719012.md#1" target="_blank">【新闻看点】林郑接连被打脸 北京该想想了</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/12/n11719012.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/15c13e5fc055d3fa_ttl7dayVnX_WhatsApp_Image_2019-09-04_at_20.57.54-600x400-1-150x120.jpeg" align ="left"></a>连续几天，林郑接连被打脸。而作为对林郑发号施令的主子，北京当局是不是该想一想呢？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 5:18 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/12/n11717070.md#1" target="_blank">《归途》入围多国电影节 各大洲专业人士赞赏</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/12/n11717070.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/587fb43d2e73ea1366ee82d10bb1e95e-150x120.jpg" align ="left"></a>2019岁末之际，新世纪影视基地出品电影《归途》接连入围各类国际电影节，影片传递的讯息和制作水准受到不同文化背景评委们的认同和肯定。自《归途》公映以来，获得的电影节奖项及入围决赛的电影节20余个，遍及全球四大洲。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 3:59 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/12/n11719079.md#1" target="_blank">来了别想走 汉人落户新疆 欲迁回户口遭拒</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/12/n11719079.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1152108739-600x400-150x120.jpg" align ="left"></a>中共曾以优厚待遇诱惑内地汉民落户新疆，加速汉化维吾尔人。然而随着新疆局势动荡，汉人想要将户口迁出新疆就不容易了。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 3:32 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/12/n11718771.md#1" target="_blank">李祥春：法轮功反迫害建立了选择善恶的标准</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/12/n11718771.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/01-lee-150x120.jpg" align ="left"></a>12月10日是国际人权日，“全球反迫害制止中共暴行、声援退党大潮”研讨会在美国国会举行。法轮功学员李祥春博士在研讨会上发言，题为“法轮功二十年的反迫害建立了选择善恶的标准”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 2:30 AM							</td></tr>
@@ -29,13 +32,6 @@
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/10/n11712118.md#1" target="_blank">【拍案惊奇】80万人游行民阵报少？纵火案存疑</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/10/n11712118.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/15dedd45a068fcbb_ttl7dayPtx_bg1209-150x120.jpg" align ="left"></a>12月9号，香港的反送中运动正式届满6个月。前一天，至少80万香港人走上街头，继续喊出五大诉求，同时纪念抗争满半年。过去半年，香港发生太多事，也成为世界舞台的主角之一。那么刚才新拍要览的部分，我们简要回顾了这6个月的历程。而纪念6个月的最大事件，还是昨天的民阵游行，我们上一期节目已经讲过了，所以今天，我们来谈两个，有关民阵游行的热门话题。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 2:48 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/9/n11711232.md#1" target="_blank">维权律师分析“世界律师大会”的欺骗内情</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/9/n11711232.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/07/e967f88369bd244c2ad6b68dab83eb58-1-150x120.jpg" align ="left"></a>“中国是目前国际社会公认的人权状况非常恶劣，臭名昭著的国家，‘律师大会’是非常荒唐的。”逃亡至加拿大的中国知名维权律师祝圣武表示。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 9:33 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/8/n11708293.md#1" target="_blank">11月份 至少49名法轮功学员被非法判刑</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/8/n11708293.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/2019-12-7-mh-persecution-panxing-nov19-3-150x120.png" align ="left"></a>11月份，至少有49名法轮功学员被非法判刑，77人非法庭审、44人非法批捕、124人构陷到检察院和法院，13名65岁以上的老年法轮功学员被冤判。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 10:52 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/9/n11710827.md#1" target="_blank">冤狱10年 哈尔滨法轮功学员王江被迫害离世</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/9/n11710827.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/11-4-150x120.jpg" align ="left"></a>被枉判10年的哈尔滨法轮功学员王江曾在大庆监狱遭残酷折磨，出现严重的骨结核等疾病，被保外就医后，身体稍有恢复，又被收监；2016年出狱后，经常遭警察骚扰、监控，于2018年5月18日离世，终年57岁。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 9:54 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/9/n11709319.md#1" target="_blank">【拍案惊奇】有惊无险 80万港人游行和平落幕</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/9/n11709319.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/15de965ef960077a_ttl7daycn5_bg120811-150x120.jpg" align ="left"></a>12月8日，香港街头重现了熟悉的场景，密集的人潮、高举的条幅、手机灯光闪烁的海洋。从夏到冬，街上人们显然添置了更多衣衫，但是在香港熟悉的街道上，人们的那份坚守，却始终没有变化。我们用三个数字来勾勒这一天的轮廓，那就是：6个月、80万人、5大诉求。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 4:00 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/9/n11709970.md#1" target="_blank">旧金山湾区民众持续三十年  为中国良心犯签贺卡</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/9/n11709970.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/tu1-DSC09393-150x120.jpg" align ="left"></a>在湾区持续了三十年的为中国良心犯签卡送暖活动，12月8日（上周日）在湾区的帕洛阿图市（Palo Alto）举行。今年的活动，由旧金山非营利组织“人道中国”与中国民主教育基金会联合主办，也邀请了硅谷中国民主促进会、北加州香港会、维吾尔人权项目等组织参与，有上百人参加。
-
-
-
-六四学生、中国民主教育基金会主席方政表示，当时的发起人，很多人坚持了三十年，有.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 2:07 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/10/n11713536.md#1" target="_blank">淄博公安局张南分局前610主任罗忠被举报</a><br></h3>山东淄博市公安局张南分局前“610”主任罗忠直接参与迫害当地至少几十名法轮功学员，现被举报到明慧网。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 7:03 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncid278_2.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncid278.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncid278_2.md#1">2</a>&nbsp;&nbsp;3&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncid278_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncid278_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncid278_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncid278_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncid278_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncid278_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncid278_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncid278_4.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/hxrfvz257/djy/blob/master/gb/ncid278_3.md#1<br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncid278_3.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/hxrfvz257/djy/blob/master/gb/ncid278_3.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid278_3.htm">http://www.epochtimes.com/gb/ncid278_3.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
